[project]
name = "integration-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=37.4.0",
    "fastapi[standard]>=0.115.13",
    "httpx[cli]>=0.28.1",
    "pytest>=8.4.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
