[project]
name = "integration-sandbox"
version = "1.0.0"
description = " A integration sandbox that provides mock endpoints to test against."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "deepdiff>=8.5.0",
    "faker>=37.4.0",
    "fastapi[standard]>=0.115.13",
    "httpx[cli]>=0.28.1",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = ["pytest>=8.4.1"]
